--- a/anikaViewFinder/Base.lproj/Main.storyboard
+++ b/anikaViewFinder/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--ViewFinder-->
         <scene sceneID="OK1-x4-RDa">
             <objects>
-                <tableViewController id="4rS-Co-Kc4" sceneMemberID="viewController">
+                <tableViewController id="4rS-Co-Kc4" customClass="PhotoTableTableViewController" customModule="anikaViewFinder" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xGO-J3-8bh">
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.52154058218002319" green="0.80428576469421387" blue="0.79577261209487915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="StCroixHairSheep-1200x800" translatesAutoresizingMaskIntoConstraints="NO" id="KLw-CS-kTb">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="StCroixHairSheep-1200x800" translatesAutoresizingMaskIntoConstraints="NO" id="KLw-CS-kTb">
                                 <rect key="frame" x="73" y="96" width="689" height="396"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -112,7 +112,7 @@
                                 <fontDescription key="fontDescription" name="Rockwell-BoldItalic" family="Rockwell" pointSize="37"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
-                                    <action selector="savePhoto:" destination="3qM-8K-ljj" eventType="touchUpInside" id="JEt-31-EGZ"/>
+                                    <action selector="savePhoto:" destination="3qM-8K-ljj" eventType="touchUpInside" id="bS9-Ji-4Bp"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rc0-Zi-Kby">
